--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -40,6 +40,20 @@ h3 {
   border:none;
 }
 
+.floating-text {
+  display:inline;
+  float:left;
+}
+
+.round-edges {
+  border-radius:4%;
+  display:inline;
+  float:left;
+  margin:5px;
+  margin-left:0px;
+  border: 5px solid #ffffff;
+}
+
 .toggle-text {
   background-color: #ffffff;
   padding:7px;
@@ -54,6 +68,11 @@ h3 {
 .scaled-quarter {
   height:25%;
   width: 25%;
+}
+
+.scaled-fifth {
+  height:20%;
+  width: 20%;
 }
 
 .scaled-eighth {
